Added TestingConfig, create_app altered to handle checkconstraint correctly depending on dev/testing env(MySQL/sqlite), tests made for every route in Customer class per Lesson03
